# markdown-wasm

./: Cargo.toml  README.md  package-lock.json  package.json
src/: lib.rs
test/: test.js
test/fixtures/: flags.md  headings.md
